	* applied a patch from Shakti Sen that closes another question dialog.
	fixes #136745:
	* src/ui.c (revert_cb): Destroying the question dialog.
	Fixes bug #136745
	* src/ghex-ui.xml: added About item its stock icon, as suggested by
	Kaveri Murthy.
	* src/findreplace.c (create_advanced_find_add_dialog): move the color
	selection in the vbox, since it screws up the action area if put
	there.
	* src/ui.c (ghex_print_document_real): create a progress dialog.
	(ghex_print_progress): progress callback for printing.
	* src/print.c (ghex_print_job_execute): allow user to call a progress
	indication callback.
	* src/hex-document.c (hex_document_export_html): fixed progress dialog
	to be a true dialog.
	(export_html_cb): destroy message box.

2004-03-04 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/ghex2.xml: Updated for GNOME 2.6, technical review draft
	* help/C/ghex2-C.omf: Updated for GNOME 2.6
	* help/C/l10n.txt: Updated for GNOME 2.6
	* help/C/figures/ghex_window_empty.png: Updated for GNOME 2.6
	* help/C/figures/ghex_window_open.png: Updated for GNOME 2.6

2004-02-12  Tomasz Kłoczk o<kloczek@pld.org.pl>

	* src/Makefile.am: fixed paralel build (make -j<N>).
	* configure.in: Trivial cleanup: remove AC_SUBST(CFLAGS),
	  AC_SUBST(CPPFLAGS) and AC_SUBST(LDFLAGS). This variables are
	  substed by default.

2003-12-30  Jaka Mocnik  <jaka@gnu.org>

	* Makefile.am: include intltool-modules dir in distribution tarball.

2003-12-29  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: added --enable-deprecations parameter to allow for
	configurable inclusion of *_DISABLE_DEPRECATED defines.
	bumped version to 2.5.2; tagged as GHEX_2_5_2; released a tarball
	* src/Makefile.am: respect the above.

2003-12-19  Shakti Sen <shakti.sen@wipro.com>

        * src/ui.c (close_cb):
        Unreferenced the object (doc) only after destroying the window.
        Fixes the bug #129674

2003-12-14  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: removed -Wall in order to allow non-gcc builds.
